src/app/docs/docs.css
@import "../../assets/css/utilities.css";
@import "../components/avatar/avatar.css";
@import "../components/badge/badge.css";
@import "../../assets/css/prism-custom.css";
@import "../../assets/css/color.css";

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
  list-style: none;
}

html {
  font-size: 16px;
}

body {
  position: relative;
  display: grid;
  grid-template-areas:
    "header header header header header"
    "side-bar content content content content"
    "side-bar content content content content";
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-row-gap: 0.5rem;
}

/* header start */
.header {
  grid-area: header;
  box-shadow: 0px 10px 8px -8px rgb(153 153 153 / 20%);
  background-color: var(--WHITE);
  display: flex;
  align-items: center;
  position: sticky;
  top: 0;
  z-index: 100;
  max-height: 3.5rem;
}

.header nav {
  width: 100%;
}

.header nav ul li:nth-child(5) {
  margin-left: auto;
}

/* navbar start */
.navbar {
  display: flex;
  column-gap: 1rem;
  align-items: center;
  font-size: 1.15rem;
  font-weight: 600;
  color: var(--GREEN-DARK);
}

.navbar li img {
  width: 5rem;
  height: 4rem;
  object-fit: cover;
}

.navbar li {
  font-size: 1.15rem;
}

.navbar > li:nth-child(2) {
  color: var(--GREEN-DARK);
  font-weight: 400;
  font-size: 1.5rem;
}

.navbar__social {
  margin-right: 1rem;
  font-size: 1.5rem;
}

.navbar__sub-heading {
  display: flex;
  flex: 1;
  justify-content: center;
  column-gap: 2rem;
}

.navbar li:last-child() {
  margin-right: 10px;
}

.navbar--background {
  border: 1px solid var(--GREEN-DARK);
}

/* navbar end */

/* header end */

/* sidebar start */
.sidebar {
  grid-area: side-bar;
  height: calc(100vh - 1rem);
  overflow-y: auto;
  padding: 1.5rem;
  box-shadow: 0px 0px 10px 4px rgb(0 0 0 / 5%);
  position: fixed;
}

.sidebar h2 {
  display: block;
  font-size: 1.4rem;
  font-weight: 600;
}
.sidebar ul li {
  display: block;
  font-size: 1.3rem;
  font-weight: 400;
}

.sidebar ul li a {
  text-decoration: none;
  color: var(--BLACK);
  font-size: 1.25rem;
}

.sidebar ul li:hover a {
  color: var(--GREEN);
}

.sidebar__parent {
  position: relative;
}

/* sidebar end */

/* Components start */
.components__wrapper {
  position: fixed;
  top: 4rem;
  left: 12rem;
  height: 100%;
  overflow: scroll;
  grid-area: content;
  padding: 0rem 1.5rem;
  box-shadow: 0px 0px 10px 4px rgb(0 0 0 / 5%);
}

.components {
  display: flex;
  column-gap: 2.5rem;
  padding: 1rem;
  flex-direction: column;
  justify-content: space-around;
  row-gap: 1rem;
}

.components__parts {
  display: flex;
  align-items: flex-end;
  column-gap: 1rem;
  flex-wrap: wrap;
  row-gap: 1.25rem;
}

.components--flex--column {
  flex-direction: column;
  align-items: stretch;
  row-gap: 1rem;
}

h2.component__heading {
  font-size: 2rem;
  font-weight: 600;
}

.components > h3 {
  font-size: 1.5rem;
  font-weight: 600;
}

.components > p.component__sub-heading {
  font-size: 1.1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.components > p,
.components span > span {
  font-size: 1.05rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.components > span span b,
.components > p b {
  color: var(--TEXT-GREY);
  border: 1px solid var(--WHITE);
  background-color: var(--GREEN-LIGHTER);
  padding: 3px 5px;
  border-radius: 5px;
  font-size: 1.1rem;
}

.components > span {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
}

/* Components end */

